; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_decodecorpus.c_generateFrame.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_decodecorpus.c_generateFrame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"frame seed: %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32*, i32)* @generateFrame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @generateFrame(i64 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %4, align 8
  %8 = trunc i64 %7 to i32
  %9 = call i32 @DISPLAYLEVEL(i32 3, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @initFrame(i32* %10)
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @writeFrameHeader(i64* %4, i32* %12, i32 %13)
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @writeBlocks(i64* %4, i32* %15, i32 %16)
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @writeChecksum(i32* %18)
  %20 = load i64, i64* %4, align 8
  ret i64 %20
}

declare dso_local i32 @DISPLAYLEVEL(i32, i8*, i32) #1

declare dso_local i32 @initFrame(i32*) #1

declare dso_local i32 @writeFrameHeader(i64*, i32*, i32) #1

declare dso_local i32 @writeBlocks(i64*, i32*, i32) #1

declare dso_local i32 @writeChecksum(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
